removed unneeded code and fixed some spacing

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,8 @@
 .section-filters {
-    max-width: 120rem;
-    margin: 0 auto;
-    padding: 5rem 0;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+}
+
+.section-featured {
+    margin-top: 10rem;
 }
